syntax = "proto3";

package openstatus.status_page.v1;

import "buf/validate/validate.proto";
import "gnostic/openapi/v3/annotations.proto";
import "openstatus/maintenance/v1/maintenance.proto";
import "openstatus/status_page/v1/page_component.proto";
import "openstatus/status_page/v1/page_subscriber.proto";
import "openstatus/status_page/v1/status_page.proto";
import "openstatus/status_report/v1/status_report.proto";

option go_package = "github.com/openstatushq/openstatus/packages/proto/openstatus/status_page/v1;statuspagev1";

// StatusPageService provides CRUD and management operations for status pages,
// including component management, component grouping, subscriber handling, and aggregated status queries.
service StatusPageService {
  // CreateStatusPage creates a new status page.
  rpc CreateStatusPage(CreateStatusPageRequest) returns (CreateStatusPageResponse);

  // GetStatusPage retrieves a specific status page by ID.
  rpc GetStatusPage(GetStatusPageRequest) returns (GetStatusPageResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // ListStatusPages returns all status pages for the workspace.
  rpc ListStatusPages(ListStatusPagesRequest) returns (ListStatusPagesResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // UpdateStatusPage updates an existing status page.
  rpc UpdateStatusPage(UpdateStatusPageRequest) returns (UpdateStatusPageResponse);

  // DeleteStatusPage removes a status page.
  rpc DeleteStatusPage(DeleteStatusPageRequest) returns (DeleteStatusPageResponse);

  // AddMonitorComponent adds a monitor-based component to a status page.
  rpc AddMonitorComponent(AddMonitorComponentRequest) returns (AddMonitorComponentResponse);

  // AddStaticComponent adds a static component to a status page.
  rpc AddStaticComponent(AddStaticComponentRequest) returns (AddStaticComponentResponse);

  // RemoveComponent removes a component from a status page.
  rpc RemoveComponent(RemoveComponentRequest) returns (RemoveComponentResponse);

  // UpdateComponent updates an existing component.
  rpc UpdateComponent(UpdateComponentRequest) returns (UpdateComponentResponse);

  // CreateComponentGroup creates a new component group.
  rpc CreateComponentGroup(CreateComponentGroupRequest) returns (CreateComponentGroupResponse);

  // DeleteComponentGroup removes a component group.
  rpc DeleteComponentGroup(DeleteComponentGroupRequest) returns (DeleteComponentGroupResponse);

  // UpdateComponentGroup updates an existing component group.
  rpc UpdateComponentGroup(UpdateComponentGroupRequest) returns (UpdateComponentGroupResponse);

  // SubscribeToPage subscribes an email to a status page. If the email was previously unsubscribed, the subscription is reactivated.
  rpc SubscribeToPage(SubscribeToPageRequest) returns (SubscribeToPageResponse) {
    option (gnostic.openapi.v3.operation) = {
      description: "Subscribes an email address to receive notifications from a status page. If the email was previously unsubscribed, the subscription is reactivated instead of creating a duplicate."
    };
  }

  // UnsubscribeFromPage removes a subscription from a status page.
  rpc UnsubscribeFromPage(UnsubscribeFromPageRequest) returns (UnsubscribeFromPageResponse);

  // ListSubscribers returns all subscribers for a status page.
  rpc ListSubscribers(ListSubscribersRequest) returns (ListSubscribersResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // GetStatusPageContent retrieves the full content of a status page including components, groups, active reports, and maintenances.
  rpc GetStatusPageContent(GetStatusPageContentRequest) returns (GetStatusPageContentResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (gnostic.openapi.v3.operation) = {
      description: "Returns the full content of a status page including its components, component groups, active status reports, and scheduled maintenances. Supports two access paths: by ID (requires authentication, workspace-scoped) or by slug (public access, requires the page to be published with access_type=PUBLIC)."
    };
  }

  // GetOverallStatus returns the aggregated status of a status page and its individual components.
  rpc GetOverallStatus(GetOverallStatusRequest) returns (GetOverallStatusResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (gnostic.openapi.v3.operation) = {
      description: "Returns the overall status of a status page along with individual component statuses. The overall status is computed from active status reports and maintenances with the following priority: degraded (from active status reports) > maintenance (from active maintenance windows) > operational."
    };
  }
}

// =============================================================================
// Page CRUD Messages
// =============================================================================

// CreateStatusPageRequest is the request to create a new status page.
message CreateStatusPageRequest {
  // Title of the status page (required).
  string title = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 256,
    (gnostic.openapi.v3.property) = {example: {yaml: "Acme Corp Status"}}
  ];

  // Description of the status page (optional).
  optional string description = 2 [(buf.validate.field).string.max_len = 1024];

  // URL-friendly slug for the status page (required). Must be lowercase alphanumeric with hyphens.
  string slug = 3 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 256,
    (buf.validate.field).string.pattern = "^[a-z0-9]+(?:-[a-z0-9]+)*$",
    (gnostic.openapi.v3.property) = {example: {yaml: "my-status-page"}}
  ];

  // URL to the homepage (optional).
  optional string homepage_url = 4 [
    (gnostic.openapi.v3.property) = {example: {yaml: "https://www.example.com"}}
  ];

  // URL to the contact page (optional).
  optional string contact_url = 5;
}

// CreateStatusPageResponse is the response after creating a status page.
message CreateStatusPageResponse {
  // The created status page.
  StatusPage status_page = 1;
}

// GetStatusPageRequest is the request to get a status page by ID.
message GetStatusPageRequest {
  // ID of the status page to retrieve (required).
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

// GetStatusPageResponse is the response containing the status page.
message GetStatusPageResponse {
  // The requested status page.
  StatusPage status_page = 1;
}

// ListStatusPagesRequest is the request to list status pages.
message ListStatusPagesRequest {
  // Maximum number of pages to return (1-100, defaults to 50).
  optional int32 limit = 1 [(buf.validate.field).int32 = {
    gte: 1
    lte: 100
  }];

  // Number of pages to skip for pagination (defaults to 0).
  optional int32 offset = 2 [(buf.validate.field).int32.gte = 0];
}

// ListStatusPagesResponse is the response containing status page summaries.
message ListStatusPagesResponse {
  // List of status pages (metadata only).
  repeated StatusPageSummary status_pages = 1;

  // Total number of status pages.
  int32 total_size = 2;
}

// UpdateStatusPageRequest is the request to update a status page.
message UpdateStatusPageRequest {
  // ID of the status page to update (required).
  string id = 1 [(buf.validate.field).string.min_len = 1];

  // New title for the status page (optional).
  optional string title = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 256
  }];

  // New description for the status page (optional).
  optional string description = 3 [(buf.validate.field).string.max_len = 1024];

  // New slug for the status page (optional).
  optional string slug = 4 [(buf.validate.field).string = {
    min_len: 1
    max_len: 256
    pattern: "^[a-z0-9]+(?:-[a-z0-9]+)*$"
  }];

  // New homepage URL (optional).
  optional string homepage_url = 5;

  // New contact URL (optional).
  optional string contact_url = 6;
}

// UpdateStatusPageResponse is the response after updating a status page.
message UpdateStatusPageResponse {
  // The updated status page.
  StatusPage status_page = 1;
}

// DeleteStatusPageRequest is the request to delete a status page.
message DeleteStatusPageRequest {
  // ID of the status page to delete (required).
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

// DeleteStatusPageResponse is the response after deleting a status page.
message DeleteStatusPageResponse {
  // Whether the deletion was successful.
  bool success = 1;
}

// =============================================================================
// Component Management Messages
// =============================================================================

// AddMonitorComponentRequest is the request to add a monitor-based component to a status page.
message AddMonitorComponentRequest {
  // ID of the status page to add the component to (required).
  string page_id = 1 [(buf.validate.field).string.min_len = 1];

  // ID of the monitor to associate with this component (required).
  string monitor_id = 2 [(buf.validate.field).string.min_len = 1];

  // Display name for the component (optional, defaults to monitor name).
  optional string name = 3 [(buf.validate.field).string.max_len = 256];

  // Description of the component (optional).
  optional string description = 4 [(buf.validate.field).string.max_len = 1024];

  // Display order of the component (optional).
  optional int32 order = 5;

  // ID of the group to add this component to (optional).
  optional string group_id = 6;
}

// AddMonitorComponentResponse is the response after adding a monitor component.
message AddMonitorComponentResponse {
  // The created component.
  PageComponent component = 1;
}

// AddStaticComponentRequest is the request to add a static component to a status page.
message AddStaticComponentRequest {
  // ID of the status page to add the component to (required).
  string page_id = 1 [(buf.validate.field).string.min_len = 1];

  // Display name for the component (required).
  string name = 2 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 256
  ];

  // Description of the component (optional).
  optional string description = 3 [(buf.validate.field).string.max_len = 1024];

  // Display order of the component (optional).
  optional int32 order = 4;

  // ID of the group to add this component to (optional).
  optional string group_id = 5;
}

// AddStaticComponentResponse is the response after adding a static component.
message AddStaticComponentResponse {
  // The created component.
  PageComponent component = 1;
}

// RemoveComponentRequest is the request to remove a component from a status page.
message RemoveComponentRequest {
  // ID of the component to remove (required).
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

// RemoveComponentResponse is the response after removing a component.
message RemoveComponentResponse {
  // Whether the removal was successful.
  bool success = 1;
}

// UpdateComponentRequest is the request to update a component.
message UpdateComponentRequest {
  // ID of the component to update (required).
  string id = 1 [(buf.validate.field).string.min_len = 1];

  // New display name for the component (optional).
  optional string name = 2 [(buf.validate.field).string.max_len = 256];

  // New description for the component (optional).
  optional string description = 3 [(buf.validate.field).string.max_len = 1024];

  // New display order (optional).
  optional int32 order = 4;

  // New group ID (optional, set to empty string to remove from group).
  optional string group_id = 5;

  // New order within the group (optional).
  optional int32 group_order = 6;
}

// UpdateComponentResponse is the response after updating a component.
message UpdateComponentResponse {
  // The updated component.
  PageComponent component = 1;
}

// =============================================================================
// Component Group Messages
// =============================================================================

// CreateComponentGroupRequest is the request to create a new component group.
message CreateComponentGroupRequest {
  // ID of the status page to create the group in (required).
  string page_id = 1 [(buf.validate.field).string.min_len = 1];

  // Display name for the group (required).
  string name = 2 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 256
  ];
}

// CreateComponentGroupResponse is the response after creating a component group.
message CreateComponentGroupResponse {
  // The created component group.
  PageComponentGroup group = 1;
}

// DeleteComponentGroupRequest is the request to delete a component group.
message DeleteComponentGroupRequest {
  // ID of the component group to delete (required).
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

// DeleteComponentGroupResponse is the response after deleting a component group.
message DeleteComponentGroupResponse {
  // Whether the deletion was successful.
  bool success = 1;
}

// UpdateComponentGroupRequest is the request to update a component group.
message UpdateComponentGroupRequest {
  // ID of the component group to update (required).
  string id = 1 [(buf.validate.field).string.min_len = 1];

  // New display name for the group (optional).
  optional string name = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 256
  }];
}

// UpdateComponentGroupResponse is the response after updating a component group.
message UpdateComponentGroupResponse {
  // The updated component group.
  PageComponentGroup group = 1;
}

// =============================================================================
// Subscriber Messages
// =============================================================================

// SubscribeToPageRequest is the request to subscribe an email to a status page.
message SubscribeToPageRequest {
  // ID of the status page to subscribe to (required).
  string page_id = 1 [(buf.validate.field).string.min_len = 1];

  // Email address to subscribe (required).
  string email = 2 [
    (buf.validate.field).string.email = true,
    (gnostic.openapi.v3.property) = {example: {yaml: "user@example.com"}}
  ];
}

// SubscribeToPageResponse is the response after subscribing to a status page.
message SubscribeToPageResponse {
  // The created subscriber.
  PageSubscriber subscriber = 1;
}

// UnsubscribeFromPageRequest is the request to unsubscribe from a status page.
message UnsubscribeFromPageRequest {
  // ID of the status page to unsubscribe from (required).
  string page_id = 1 [(buf.validate.field).string.min_len = 1];

  // Identifier for the subscription (either email or id).
  oneof identifier {
    // Email address to unsubscribe.
    string email = 2;
    // Subscriber ID.
    string id = 3;
  }
}

// UnsubscribeFromPageResponse is the response after unsubscribing from a status page.
message UnsubscribeFromPageResponse {
  // Whether the unsubscription was successful.
  bool success = 1;
}

// ListSubscribersRequest is the request to list subscribers of a status page.
message ListSubscribersRequest {
  // ID of the status page to list subscribers for (required).
  string page_id = 1 [(buf.validate.field).string.min_len = 1];

  // Maximum number of subscribers to return (1-100, defaults to 50).
  optional int32 limit = 2 [(buf.validate.field).int32 = {
    gte: 1
    lte: 100
  }];

  // Number of subscribers to skip for pagination (defaults to 0).
  optional int32 offset = 3 [(buf.validate.field).int32.gte = 0];

  // Whether to include unsubscribed users (defaults to false).
  optional bool include_unsubscribed = 4;
}

// ListSubscribersResponse is the response containing status page subscribers.
message ListSubscribersResponse {
  // List of subscribers.
  repeated PageSubscriber subscribers = 1;

  // Total number of subscribers matching the filter.
  int32 total_size = 2;
}

// =============================================================================
// Full Content & Status Messages
// =============================================================================

// GetStatusPageContentRequest is the request to get the full content of a status page.
message GetStatusPageContentRequest {
  // Identifier for the status page (either id or slug).
  oneof identifier {
    // ID of the status page.
    string id = 1;
    // Slug of the status page.
    string slug = 2;
  }
}

// GetStatusPageContentResponse is the response containing the full status page content.
message GetStatusPageContentResponse {
  // The status page details.
  StatusPage status_page = 1;

  // Components on the status page.
  repeated PageComponent components = 2;

  // Component groups on the status page.
  repeated PageComponentGroup groups = 3;

  // Active and recent status reports.
  repeated openstatus.status_report.v1.StatusReport status_reports = 4;

  // Scheduled maintenances.
  repeated openstatus.maintenance.v1.MaintenanceSummary maintenances = 5;
}

// GetOverallStatusRequest is the request to get the overall status of a status page.
message GetOverallStatusRequest {
  // Identifier for the status page (either id or slug).
  oneof identifier {
    // ID of the status page.
    string id = 1;
    // Slug of the status page.
    string slug = 2;
  }
}

// ComponentStatus represents the status of a single component.
message ComponentStatus {
  // ID of the component.
  string component_id = 1;

  // Current status of the component.
  OverallStatus status = 2;
}

// GetOverallStatusResponse is the response containing the overall status and individual component statuses.
message GetOverallStatusResponse {
  // Aggregated status across all components.
  OverallStatus overall_status = 1;

  // Status of individual components.
  repeated ComponentStatus component_statuses = 2;
}
